// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns the expected query for multiple ids 1`] = `
"SELECT
DISTINCT ws.pyid work_order_id,
TO_CHAR(ac.pxupdatedatetime, 'dd/mm/yyyy hh24:mi:ss') updated_date,
ws.purposeworkarea work_area,
ws.purposecountry country,
ws.aimname aim,
ws.businessarea business_area,
ws.purposename purpose,
ws.speciesforpurpose purpose_species,
ac.pystatuswork ws_status,
ac.pysladeadline target_date,
ws_loc.entityid location_id,
ws_loc.cphid cph,
ws_c.entityid customer_id,
ws_lu.entityid livestock_unit_id,
ws_f.entityid facility_unit_id,
wsa.wsa_id,
wsa.activity_name,
TO_CHAR(ac.wsactivationdate, 'yyyy-mm-dd') wsactivationdate,
TO_CHAR(ac.wsstartdate, 'yyyy-mm-dd') wsstartdate,
TO_CHAR(ac.wsearliestactivitystartdate, 'dd/mm/yyyy hh24:mi:ss') wsearliestactivitystartdate,
TO_CHAR(ac.wslatestactivitycompletiondate, 'dd/mm/yyyy hh24:mi:ss') wslatestactivitycompletiondate,
ws.phase,
TO_CHAR(ac.pysladeadline, 'yyyy-mm-dd') due_date,
wsa.activitysequencenumber

FROM
pega_data.ahwork_ac ac,
pega_Data.index_ac_workschedule ws,
(
  SELECT
  entityid,
  pyid,
  cphid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleLocation'
) ws_loc,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleCustomers'
) ws_c,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleLivestockUnits'
) ws_lu,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleFacilities'
) ws_f,
(
  SELECT
  SUBSTR(wsa.pxcoverinskey, 7) ws_id,
  wsa.pyid wsa_id,
  aca.actname activity_name,
  wsa.pystatuswork wsa_status,
  aca.activitysequencenumber

  FROM
  pega_Data.ahwork_ac wsa,
  pega_data.index_ac_activity aca

  WHERE
  wsa.pxinsname = aca.pyid
  AND
  aca.pydescription IS NULL
  AND
  SUBSTR(wsa.pxcoverinskey, 6) IS NOT NULL
) wsa

WHERE
ac.pzinskey = ws.pxinsindexedkey
AND
ac.pyid = ws_loc.pyid (+)
AND
ac.pyid = ws_c.pyid(+)
AND
ac.pyid = ws_lu.pyid(+)
AND
ac.pyid = ws_f.pyid(+)
AND
ws.pyid = wsa.ws_id(+)
AND
ac.pxobjclass = 'AH-AC-WS'
AND
ac.pystatuswork IN ('Open')
AND
ws.pyid IN ('WS-12345', 'WS-12346')
"
`;

exports[`returns the expected query for valid parameters 1`] = `
"SELECT
DISTINCT ws.pyid work_order_id,
TO_CHAR(ac.pxupdatedatetime, 'dd/mm/yyyy hh24:mi:ss') updated_date,
ws.purposeworkarea work_area,
ws.purposecountry country,
ws.aimname aim,
ws.businessarea business_area,
ws.purposename purpose,
ws.speciesforpurpose purpose_species,
ac.pystatuswork ws_status,
ac.pysladeadline target_date,
ws_loc.entityid location_id,
ws_loc.cphid cph,
ws_c.entityid customer_id,
ws_lu.entityid livestock_unit_id,
ws_f.entityid facility_unit_id,
wsa.wsa_id,
wsa.activity_name,
TO_CHAR(ac.wsactivationdate, 'yyyy-mm-dd') wsactivationdate,
TO_CHAR(ac.wsstartdate, 'yyyy-mm-dd') wsstartdate,
TO_CHAR(ac.wsearliestactivitystartdate, 'dd/mm/yyyy hh24:mi:ss') wsearliestactivitystartdate,
TO_CHAR(ac.wslatestactivitycompletiondate, 'dd/mm/yyyy hh24:mi:ss') wslatestactivitycompletiondate,
ws.phase,
TO_CHAR(ac.pysladeadline, 'yyyy-mm-dd') due_date,
wsa.activitysequencenumber

FROM
pega_data.ahwork_ac ac,
pega_Data.index_ac_workschedule ws,
(
  SELECT
  entityid,
  pyid,
  cphid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleLocation'
) ws_loc,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleCustomers'
) ws_c,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleLivestockUnits'
) ws_lu,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleFacilities'
) ws_f,
(
  SELECT
  SUBSTR(wsa.pxcoverinskey, 7) ws_id,
  wsa.pyid wsa_id,
  aca.actname activity_name,
  wsa.pystatuswork wsa_status,
  aca.activitysequencenumber

  FROM
  pega_Data.ahwork_ac wsa,
  pega_data.index_ac_activity aca

  WHERE
  wsa.pxinsname = aca.pyid
  AND
  aca.pydescription IS NULL
  AND
  SUBSTR(wsa.pxcoverinskey, 6) IS NOT NULL
) wsa

WHERE
ac.pzinskey = ws.pxinsindexedkey
AND
ac.pyid = ws_loc.pyid (+)
AND
ac.pyid = ws_c.pyid(+)
AND
ac.pyid = ws_lu.pyid(+)
AND
ac.pyid = ws_f.pyid(+)
AND
ws.pyid = wsa.ws_id(+)
AND
ac.pxobjclass = 'AH-AC-WS'
AND
ac.pystatuswork IN ('Open')
AND
ws.pyid IN ('WS-12345')
"
`;
